logs/evidentialtoolbus.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/EvidentialToolBus-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.9.dist-info'...
Listing './lib/python3.5/site-packages/dirsync'...
Listing './lib/python3.5/site-packages/dirsync-2.2.2.egg-info'...
Listing './lib/python3.5/site-packages/etb'...
Listing './lib/python3.5/site-packages/etb/datalog'...
Compiling './lib/python3.5/site-packages/etb/datalog/engine.py'...
***   File "./lib/python3.5/site-packages/etb/datalog/engine.py", line 814
    return map(lambda (claim, expl): create_external_claim(claim, expl),
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/etb/datalog/model.py'...
***   File "./lib/python3.5/site-packages/etb/datalog/model.py", line 64
    print "s to i", self.__s_to_i
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/etb/datalog/test'...
Compiling './lib/python3.5/site-packages/etb/etbclientlib.py'...
***   File "./lib/python3.5/site-packages/etb/etbclientlib.py", line 113
    print 'error: put_file(<src>), <src> should be relative, or use put_file(<src>, <dst).'
                                                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/etb/etbconfig.py'...
***   File "./lib/python3.5/site-packages/etb/etbconfig.py", line 67
    print 'Config file {0} does not exist'.format(self.config_file)
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/etb/parser.py'...
***   File "./lib/python3.5/site-packages/etb/parser.py", line 114
    def visit_statements(self, node, (_, statements)):
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/etb/terms.py'...
***   File "./lib/python3.5/site-packages/etb/terms.py", line 232
    return mk_map(map(lambda (x, y): (mk_stringconst(x), mk_term(y)), obj.iteritems()))
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/etb/wrapper.py'...
***   File "./lib/python3.5/site-packages/etb/wrapper.py", line 205
    def parseResult(self, (stdout, _stderr)) :
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/etb/wrappers'...
Compiling './lib/python3.5/site-packages/etb/wrappers/builtins.py'...
***   File "./lib/python3.5/site-packages/etb/wrappers/builtins.py", line 173
    print goal, facts
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/graphviz'...
Listing './lib/python3.5/site-packages/graphviz-0.8.2.dist-info'...
Listing './lib/python3.5/site-packages/parsimonious'...
Listing './lib/python3.5/site-packages/parsimonious/tests'...
Compiling './lib/python3.5/site-packages/parsimonious/tests/benchmarks.py'...
***   File "./lib/python3.5/site-packages/parsimonious/tests/benchmarks.py", line 91
    print 'Took %.3fs to parse %.1fKB: %.0fKB/s.' % (seconds_each,
                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/parsimonious-0.8.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/proxyland'...
Compiling './lib/python3.5/site-packages/proxyland/daemon.py'...
***   File "./lib/python3.5/site-packages/proxyland/daemon.py", line 34
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/proxyland/log.py'...
***   File "./lib/python3.5/site-packages/proxyland/log.py", line 24
    print "Confirm.getChild called with name:'%s' and request: %s from host: %s" % (name, request, request.getHost())
                                                                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/proxyland/proxy.py'...
***   File "./lib/python3.5/site-packages/proxyland/proxy.py", line 20
    print "I need to be configured properly before I'll run: {0}".format(state.complaint)
                                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/proxyland/register.py'...
***   File "./lib/python3.5/site-packages/proxyland/register.py", line 116
    print "validateEmail failed!"
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/proxyland/spawn.py'...
***   File "./lib/python3.5/site-packages/proxyland/spawn.py", line 39
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pydot2-1.0.33.egg-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
